--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 
 </head>
 <body>
+    <div class="game-container">
+        <div class="stats">
+<div>Vida: <span id="vida">100</span></div>
+<div>Ouro: <span id="ouro">150</span></div>
+<div>Wave: <span id="wave">1</span></div>
+<div>Inimigos: <span id="enemies-left">0</span></div>
+        </div>
+
+
+
+
+    </div>
 
 <header>
 
 <nav>
 <ul>
-    <li><a>href="">home</a></li>
+    <li><a href=""> home </a></li>
 </ul>
 
 </nav>
