--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ SUGESTÃO: Mude para "pt-br" já que é em português
     <button class="buy-tower">Comprar</button>
     <!-- Botão para comprar a torre -->
 
-    
+
     
 
 
@@ -101,7 +101,7 @@ SUGESTÃO: Mude para "pt-br" já que é em português
         <p>&copy 2026</p>
         <!--
         &copy: Símbolo de copyright ©
-        2026: Ano (você pode colocar 2024 ou deixar dinâmico)
+        2026: Ano (você pode colocar xxxx ou deixar dinâmico)
         -->
     </footer>
 </body>
